--- a/contact.css
+++ b/contact.css
@@ -1,3 +1,7 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 .kepala{
   width: 100%;
   background-color: #0009;
@@ -13,42 +17,38 @@
   margin-right: 30px;
   display: inline-block;
 }
-.kiri{
+
+.utama{
   width: 100%;
   background-color: none ;
   position: relative;
-  margin-top: 200px;
-  height: 800px;
-
+  padding-top: 200px;
+  display: block;
 }
-
-.kiri p{
-  margin-left: 100px;
-  font-size: 30px;
-  width:70%;
-  color:black;
+label {
+  display: block;
+  margin-bottom: 5px;
 }
-.kanan p{
-  margin-left: 1000px;
-  font-size: 30px;
-  width:70%;
-  color:black
+.utama p{
+  text-align: center;
+  font-size: 50px;
+  width:100%;
+  color:white;
 }
 
 .kaki{
   width: 100%;
   background-color: #0009;
-  position: absolute;
-  bottom: 15;
-  height: 125px;
+  height: 140px;
 }
 
 .Judul{
   background-color: none;
-  margin-top: -35px;
+  margin-top: -30px;
   font-size: 50px;
   position: absolute;
-  left: 30px;
+  left: 50px;
+  padding-top: 50px;
 }
 .Judul a{
   color:white;
@@ -56,10 +56,11 @@
 }
 .menu1{
   background-color: none;
-  font-size: 25px;
+  font-size: 20px;
   position: absolute;
   right: 80px;
   top: 40px;
+  z-index: 99;
 }
 .menu1 a{
   margin-right: 25px;
@@ -68,16 +69,78 @@
 }
 
 .all{
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  top:0;
+  display: block;
   width: 100%;
-  height: 100px;
-  color:white;
+  min-height: 600px;
+  background-color: white;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
+
+.logo2{
+  background-color: none;
+  margin-top: 23px;
+  font-size: 50px;
+  position: absolute;
+  left: 40px;
+  color: white;
+}
+
+.cara-kerja {
+  display: flex;
+  width: 100%;
+  padding: 50px 0;
+  flex-direction: row;
+  justify-content: space-around;
+  height: 200px;
+  flex-wrap: wrap;
+  text-align: center;
+}
+
+.cara-kerja-content {
+  flex-basis: 240px;
+  height: 300px
+  padding: 30px;
+  color: white;
+}
+
+.cara-kerja-content img{
+  width: 70%;
+}
+
+
+footer {
+  background-color: black;
+  padding: 20px 0;
+}
+footer p {
+  color: white;
+  text-align: center;
+}
+
+.kiri{
+  width: 100%;
+  background-color: none ;
+  position: relative;
+  margin-top: 10px;
+  height: 800px;
+
+}
+
+.kiri p{
+  margin-left: 100px;
+  font-size: 25px;
+  width:80%;
+  color:black;
+}
+.kaki{
+  width: 100%;
+  background-color: #0009;
+  position: absolute;
+  bottom: 15;
+  height: 125px;
+}
 .kontak{
   width: 100%;
   height:40px;
