--- a/kemangi.css
+++ b/kemangi.css
@@ -1,114 +1,74 @@
-.kepala{
-  width: 100%;
+header, section, footer, aside, nav, article, figure, figcaption {
+    display: block;}
+
+.wrapper {
+  width: 940px;
+  margin: 20px auto 20px auto;
+  border: 2px solid #000000;
+    background-color: #ffffff;}
+    
+h1 {
+  text-indent: -9999px;
+  width: 940px;
+  height: 130px;
+  margin: 0px;}
+nav, footer {
+  clear: both;
+  color: #ffffff;
   background-color: #0009;
-  position: absolute;
-  top:0;
-  left:0;
-  right: 0;
-  height:100px;
-  box-shadow: 0px 1px 10px #888888;
-}
-.atas{
-  width:70%;
-  font-size:23px;
-
-}
-.kepala a:hover{
-  color: #f2bb85;
-  margin-right: 30px;
-  display: inline-block;
-}
-.kiri{
-  width: 100%;
-  background-color: none ;
-  position: relative;
-  margin-top: 200px;
-  height: 800px;
-
-}
-
-.kiri p{
-  margin-left: 100px;
-  font-size: 30px;
-  width:70%;
-  color:black;
-}
-
-.kaki{
-  width: 100%;
-  background-color: #0009;
-  position: absolute;
-  bottom: 15;
-  height: 125px;
-}
-
-.Judul{
-  background-color: none;
-  margin-top: -35px;
-  font-size: 50px;
-  position: absolute;
-  left: 30px;
-}
-.Judul a{
-  color:white;
-  text-decoration: none;
-}
-.menu1{
-  background-color: none;
-  font-size: 25px;
-  position: absolute;
-  right: 80px;
-  top: 40px;
-}
-.menu1 a{
-  margin-right: 25px;
-  text-decoration: none;
+  height: 135px;}
+section.courses {
+  float: left;
+  width: 659px;
+  border-right: 1px solid #eeeeee;}
+article {
+  clear: both;
+  overflow: auto;
+  width: 100%;}
+hgroup {
+  margin-top: 40px;}
+figure {
+    float: left;
+  width: 290px;
+  height: 220px;
+    padding: 5px;
+  margin: 20px;
+  border: 1px solid #eeeeee;}
+figcaption {
+  font-size: 90%;
+  text-align: left;}
+aside {
+  width: 230px;
+  float: left;
+  color:#f2bb85;
+  padding: 0px 0px 0px 20px;
+  background-color:#75ab49;}
+aside section a {
+  display: block;
+  padding: 10px;
   color: white;
-}
-
-.all{
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  top:0;
-  width: 100%;
-  height: 100px;
-  color:white;
-}
-
-.kontak{
-  width: 100%;
-  height:40px;
-  position: absolute;
-  bottom: 0;
-  background-color: #3c4245;
-}
-.kontak1{
-  position: relative;
-  color: white;
-  margin-top: 10px;
-  margin-left: 40px;
-}
-.info{
-  position: absolute;
-  right: 20px;
-  bottom: 0px;
-  color:white;
-}
-.logo2{
-  background-color: none;
-  margin-top: 12px;
-  font-size: 50px;
-  position: absolute;
-  left: 40px;
-  color: white;
-}
+  border-bottom: 1px solid #eeeeee;
+  }
+aside section a:hover {
+  color: #db5656;
+  background-color: none;}
+a {
+  color: #de6581;
+  text-decoration: none;}
+h1, h2, h3 {
+  font-weight: normal;}
+h2 {
+  margin: 10px 0px 5px 0px;
+  padding: 0px;}
+h3 {
+  margin: 0px 0px 10px 0px;
+  color: #de6581;}
+aside h2 {
+  padding: 30px 0px 10px 0px;
+  color: #de6581;}
 .isi{
-width:100%;
-font-size: 20px;
-right:200px;
+
 }
-.badan{
-  top:200px;
+.box {
+ ,
 }
