--- a/seledri2.css
+++ b/seledri2.css
@@ -96,4 +96,102 @@
   position: absolute;
   left: 40px;
   color: white;
+.kepala{
+  width: 100%;
+  background-color: #0009;
+  position: absolute;
+  top:0;
+  left:0;
+  right: 0;
+  height:100px;
+  box-shadow: 0px 1px 10px #888888;
+}
+.kepala a:hover{
+  color: #f2bb85;
+  margin-right: 30px;
+  display: inline-block;
+}
+.utama{
+  width: 100%;
+  background-color: none ;
+  position: relative;
+  margin-top: 150px;
+  height: 800px;
+}
+.utama p{
+  margin-left: 100px;
+  font-size: 22px;
+  width:70%;
+  color:black;
+}
+
+.kaki{
+  width: 100%;
+  background-color: #0009;
+  position: absolute;
+  bottom: 20;
+  height: 125px;
+}
+
+.Judul{
+  background-color: none;
+  margin-top: -35px;
+  font-size: 50px;
+  position: absolute;
+  left: 30px;
+}
+.Judul a{
+  color:white;
+  text-decoration: none;
+}
+.menu1{
+  background-color: none;
+  font-size: 25px;
+  position: absolute;
+  right: 80px;
+  top: 40px;
+}
+.menu1 a{
+  margin-right: 25px;
+  text-decoration: none;
+  color: white;
+}
+
+.all{
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  top:0;
+  width: 100%;
+  height: 100px;
+  color:white;
+}
+
+.kontak{
+  width: 100%;
+  height:40px;
+  position: absolute;
+  bottom: 0;
+  background-color: #3c4245;
+}
+.kontak1{
+  position: relative;
+  color: white;
+  margin-top: 10px;
+  margin-left: 40px;
+}
+.info{
+  position: absolute;
+  right: 20px;
+  bottom: 0px;
+  color:white;
+}
+.logo2{
+  background-color: none;
+  margin-top: 15px;
+  font-size: 50px;
+  position: absolute;
+  left: 40px;
+  color: white;
 }
