--- a/contact.css
+++ b/contact.css
@@ -11,6 +11,8 @@
   right: 0;
   height:100px;
   box-shadow: 0px 1px 10px #888888;
+  background: url(12.jpg);
+  color: #0009;
 }
 .kepala a:hover{
   color: #f2bb85;
