--- a/contact.css
+++ b/contact.css
@@ -17,7 +17,6 @@
 .kepala a:hover{
   color: #f2bb85;
   margin-right: 30px;
-  display: inline-block;
 }
 
 .utama{
@@ -142,6 +141,7 @@ footer p {
   position: absolute;
   bottom: 15;
   height: 125px;
+  margin-top: 5em;
 }
 .kontak{
   width: 100%;
@@ -178,7 +178,7 @@ h1{
 .kotak_pesan{
   width: 550px;
   background: white;
-  bottom:100px ;
+  bottom:90px ;
   top:100px; auto;
   padding: 30px 90px;
 }
@@ -223,3 +223,68 @@ input[type=text], select, textarea {
   border-radius: 4px;
   resize: vertical;
 }
+.tombol_login{
+  background: #46de4b;
+  color: white;
+  font-size: 11pt;
+  width: 100%;
+  border: none;
+  border-radius: 3px;
+  padding: 10px 20px;
+}
+
+
+input[type=text], select, textarea {
+  width: 100%; /* Full width */
+  padding: 12px; /* Some padding */ 
+  border: 1px solid #ccc; /* Gray border */
+  border-radius: 4px; /* Rounded borders */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-top: 6px; /* Add a top margin */
+  margin-bottom: 16px; /* Bottom margin */
+  resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+/* When moving the mouse over the submit button, add a darker green color */
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+/* Add a background color and some padding around the form */
+.container {
+  margin-left: 100px;
+  margin-right: 100px;
+  margin-top: 11em;
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.tombol_login {
+  background: #46de4b;
+  color: white;
+  font-size: 15pt;
+  width: 100%;
+  border: none;
+  border-radius: 5px;
+  padding: 5px 30px;
+  text-decoration: none;
+}
+
+.tombol_login:hover{
+  background: #25BB42;
+}
+
+
+
