--- a/about.css
+++ b/about.css
@@ -1,3 +1,7 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 .kepala{
   width: 100%;
   background-color: #0009;
@@ -7,40 +11,32 @@
   right: 0;
   height:100px;
   box-shadow: 0px 1px 10px #888888;
+  background: url(12.jpg);
+  color: #0009;
 }
 .kepala a:hover{
   color: #f2bb85;
   margin-right: 30px;
-  display: inline-block;
 }
-.utama{
-  width: 100%;
-  background-color: none ;
-  position: relative;
-  margin-top: 150px;
-  height: 800px;
-}
-.utama p{
-  margin-left: 100px;
-  font-size: 22px;
-  width:70%;
-  color:black;
+
+label {
+  display: block;
+  margin-bottom: 5px;
 }
 
 .kaki{
   width: 100%;
   background-color: #0009;
-  position: absolute;
-  bottom: 20;
-  height: 125px;
+  height: 140px;
 }
 
 .Judul{
   background-color: none;
-  margin-top: -35px;
+  margin-top: -30px;
   font-size: 50px;
   position: absolute;
-  left: 30px;
+  left: 50px;
+  padding-top: 50px;
 }
 .Judul a{
   color:white;
@@ -48,10 +44,11 @@
 }
 .menu1{
   background-color: none;
-  font-size: 25px;
+  font-size: 20px;
   position: absolute;
   right: 80px;
   top: 40px;
+  z-index: 99;
 }
 .menu1 a{
   margin-right: 25px;
@@ -60,18 +57,78 @@
 }
 
 .all{
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  top:0;
+  display: block;
   width: 100%;
-  height: 100px;
-  color:white;
-  background-repeat: repeat;
-  background :url(12.jpg) ;
+  min-height: 600px;
+  background-color: white;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
+
+.logo2{
+  background-color: none;
+  margin-top: 23px;
+  font-size: 50px;
+  position: absolute;
+  left: 40px;
+  color: white;
+}
+
+.cara-kerja {
+  display: flex;
+  width: 100%;
+  padding: 50px 0;
+  flex-direction: row;
+  justify-content: space-around;
+  height: 200px;
+  flex-wrap: wrap;
+  text-align: center;
+}
+
+.cara-kerja-content {
+  flex-basis: 240px;
+  height: 300px
+  padding: 30px;
+  color: white;
+}
+
+.cara-kerja-content img{
+  width: 70%;
+}
+
+
+footer {
+  background-color: black;
+  padding: 20px 0;
+}
+footer p {
+  color: white;
+  text-align: center;
+}
+
+.kiri{
+  width: 100%;
+  background-color: none ;
+  position: relative;
+  margin-top: 10px;
+  height: 200px;  
+}
+
+.kiri p{
+  margin-left: 100px;
+  font-size: 25px;
+  width:80%;
+  color:black;
+}
+.kaki{
+  width: 100%;
+  background-color: #0009;
+  position: absolute;
+  bottom: 15;
+  height: 125px;
+  margin-top: 5em;
+}
 .kontak{
   width: 100%;
   height:40px;
@@ -93,9 +150,44 @@
 }
 .logo2{
   background-color: none;
-  margin-top: 15px;
+  margin-top: 12px;
   font-size: 50px;
   position: absolute;
   left: 40px;
   color: white;
 }
+h1{
+  text-align: center;
+  font-weight: 300;
+}
+
+.utama{
+  width: 100%;
+  background-color: none ;
+  position: relative;
+  margin-top: 150px;
+  height: 800px;
+  text-align: justify;
+}
+.utama p{
+  margin-left: 100px;
+  font-size: 22px;
+  width:70%;
+  color:black;
+}
+.tombol_login {
+  background: #46de4b;
+  color: white;
+  font-size: 15pt;
+  width: 100%;
+  border: none;
+  border-radius: 5px;
+  padding: 5px 30px;
+  text-decoration: none;
+}
+
+.tombol_login:hover{
+  background: #25BB42;
+}
+
+
