--- a/about2.css
+++ b/about2.css
@@ -2,13 +2,6 @@
   margin: 0;
   padding: 0;
 }
-  
-body{
-  background: url("12.jpg");
-  background-size: 100%;
-  background-attachment: fixed;
-}
-
 .kepala{
   width: 100%;
   background-color: #0009;
@@ -18,29 +11,18 @@ body{
   right: 0;
   height:100px;
   box-shadow: 0px 1px 10px #888888;
+  background: url(12.jpg);
+  color: #0009;
 }
 .kepala a:hover{
   color: #f2bb85;
   margin-right: 30px;
-
 }
 
-.utama{
-  width:100%;
-  background-color: none ;
-  position: relative;
-  padding-top: 100px;
+label {
   display: block;
-  text-decoration: none;
+  margin-bottom: 5px;
 }
-.utama p{
-  margin-top: 10%;
-  text-align: center;
-  font-size: 50px;
-  width:100%;
-  color:white;
-}
-
 
 .kaki{
   width: 100%;
@@ -78,10 +60,11 @@ body{
   display: block;
   width: 100%;
   min-height: 600px;
-  /*background: url('12.jpg');*/
+  background-color: white;
   background-size: cover;
   background-repeat: no-repeat;
 }
+
 
 .logo2{
   background-color: none;
@@ -92,54 +75,22 @@ body{
   color: white;
 }
 
-.mulai-belajar{
-  display: flex;
-  width: 100%;
-  padding: 10px 0;
-  flex-direction: row;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  text-align: center;
-  background-color: white;
-  
-}
-.mulai-belajar-content {
-  flex-basis: 240px;
-  height: 200px;
-  padding: 30px;
-  color:black;
-  text-decoration:none;
-}
-.mulai-belajar-content a{
-  text-decoration: none;
-}
-.mulai-belajar-content img {
-  width: 70%;
-  
-}
 .cara-kerja {
   display: flex;
-  width: 90%;
+  width: 100%;
   padding: 50px 0;
   flex-direction: row;
   justify-content: space-around;
   height: 200px;
   flex-wrap: wrap;
   text-align: center;
-  align-items: center;
-  margin-top: 2em;
-  margin-left: 5%;
-  margin-bottom: 10em;
-  background-color: white;
-  border-radius: 30px;
 }
 
 .cara-kerja-content {
   flex-basis: 240px;
-  height: 200px
+  height: 300px
   padding: 30px;
-  color: black;
-  font-size:25px;
+  color: white;
 }
 
 .cara-kerja-content img{
@@ -156,6 +107,28 @@ footer p {
   text-align: center;
 }
 
+.kiri{
+  width: 100%;
+  background-color: none ;
+  position: relative;
+  margin-top: 10px;
+  height: 200px;  
+}
+
+.kiri p{
+  margin-left: 100px;
+  font-size: 25px;
+  width:80%;
+  color:black;
+}
+.kaki{
+  width: 100%;
+  background-color: #0009;
+  position: absolute;
+  bottom: 15;
+  height: 125px;
+  margin-top: 5em;
+}
 .kontak{
   width: 100%;
   height:40px;
@@ -177,60 +150,33 @@ footer p {
 }
 .logo2{
   background-color: none;
-  margin-top: 15px;
+  margin-top: 12px;
   font-size: 50px;
   position: absolute;
   left: 40px;
   color: white;
 }
-.kaki{
+h1{
+  text-align: center;
+  font-weight: 300;
+}
+
+.utama{
   width: 100%;
-  background-color: #0009;
-  position: absolute;
-  bottom: 15;
-  height: 125px;
+  background-color: none ;
+  position: relative;
+  margin-top: 150px;
+  height: 800px;
+  text-align: justify;
 }
-.text_step {
-  margin-top: 3em;
-  text-align: center;
-  font-size: 45px;
-  width:100%;
-  color:white;
+.utama p{
+  margin-left: 100px;
+  font-size: 22px;
+  width:70%;
+  color:black;
 }
-
-.search{
-  margin-top: 2em;
-  margin-left: 20%;
-}
-.text-search {
-  margin-top: 50px;
-  text-align: center;
-  font-size: 45px;
-  width:100%;
-  color:white;
-}
-
-input[type=text] {
-  width: 130px;
-  box-sizing: border-box;
-  border: 2px solid #ccc;
-  border-radius: 4px;
-  font-size: 16px;
-  background-color: white;
-  background-image: url('searchicon.png');
-  background-position: 10px 10px; 
-  background-repeat: no-repeat;
-  padding: 12px 20px 12px 40px;
-  /*height: 100px;*/
-  width: 50em;
-  -webkit-transition: width 0.4s ease-in-out;
-  transition: width 0.4s ease-in-out;
-}
-
-/*input[type=text]:focus {
-  width: 100%;*/
 .tombol_login {
-  background: #46de4b;
+  background: #d6291a;
   color: white;
   font-size: 15pt;
   width: 100%;
@@ -243,5 +189,6 @@ input[type=text] {
 .tombol_login:hover{
   background: #25BB42;
 }
+
 
 
