--- a/artikel.css
+++ b/artikel.css
@@ -1,4 +1,8 @@
-a.kepala{
+* {
+  margin: 0;
+  padding: 0;
+}
+.kepala{
   width: 100%;
   background-color: #0009;
   position: absolute;
@@ -7,48 +11,46 @@ a.kepala{
   right: 0;
   height:100px;
   box-shadow: 0px 1px 10px #888888;
+  background: url(12.jpg);
+  color: #0009;
 }
 .kepala a:hover{
   color: #f2bb85;
   margin-right: 30px;
-  display: inline-block;
 }
-.kiri{
+
+.utama{
   width: 100%;
   background-color: none ;
   position: relative;
-  margin-top: 200px;
-  height: 800px;
-
+  padding-top: 200px;
+  display: block;
 }
-
-.kiri p{
-  margin-left: 100px;
-  font-size: 30px;
-  width:70%;
-  color:black;
+label {
+  display: block;
+  margin-bottom: 5px;
 }
-.kanan p{
-  margin-left: 1000px;
-  font-size: 30px;
-  width:70%;
-  color:black
+.utama p{
+  text-align: center;
+  font-size: 50px;
+  width:100%;
+  color:white;
+  bottom-border:6px solid;
 }
 
 .kaki{
   width: 100%;
   background-color: #0009;
-  position: absolute;
-  bottom: 15;
-  height: 125px;
+  height: 140px;
 }
 
 .Judul{
   background-color: none;
-  margin-top: -35px;
+  margin-top: -30px;
   font-size: 50px;
   position: absolute;
-  left: 30px;
+  left: 50px;
+  padding-top: 50px;
 }
 .Judul a{
   color:white;
@@ -60,6 +62,7 @@ a.kepala{
   position: absolute;
   right: 80px;
   top: 40px;
+  z-index: 99;
 }
 .menu1 a{
   margin-right: 25px;
@@ -68,16 +71,34 @@ a.kepala{
 }
 
 .all{
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  top:0;
+  display: block;
   width: 100%;
-  height: 100px;
-  color:white;
+  min-height: 600px;
+  background-color: white;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
+
+.logo2{
+  background-color: none;
+  margin-top: 23px;
+  font-size: 50px;
+  position: absolute;
+  left: 40px;
+  color: white;
+}
+
+
+
+.kaki{
+  width: 100%;
+  background-color: #0009;
+  position: absolute;
+  bottom: 15;
+  height: 125px;
+  margin-top: 5em;
+}
 .kontak{
   width: 100%;
   height:40px;
@@ -99,14 +120,28 @@ a.kepala{
 }
 .logo2{
   background-color: none;
-  margin-top: 12px;
+  margin-top: 30px;
   font-size: 50px;
   position: absolute;
   left: 40px;
   color: white;
 }
 
-/*css untuk menu hover dropdown*/
+.tombol_login {
+  background: #46de4b;
+  color: white;
+  font-size: 15pt;
+  width: 100%;
+  border: none;
+  border-radius: 5px;
+  padding: 5px 30px;
+  text-decoration: none;
+}
+
+}
+.tombol_login:hover{
+  background: #25BB42;
+}
 nav ul li:hover .sub{display:block}
 nav ul .sub {
     display:none;
@@ -157,7 +192,7 @@ nav li a {
 nav li a:hover, nav li a.current {
   color: #000000;}
 section.courses {
-  float: left;
+  margin-left:50px;
   width: 659px;
   border-right: 1px solid #eeeeee;}
 article {
@@ -204,3 +239,8 @@ aside h2 {
 footer {
   font-size: 80%;
   padding: 7px 0px 0px 20px;}
+.isi{
+  padding-top: 100px;
+  width:80%;
+  margin-left: 2;
+}
