--- a/profil.css
+++ b/profil.css
@@ -75,9 +75,9 @@
   width: 100%;
   background-color: #0009;
   position: absolute;
-  bottom: 15;
+  bottom:;
   height: 125px;
-  margin-top: 5em;
+  margin-top: -65px;
 }
 .kontak{
   width: 100%;
@@ -117,12 +117,11 @@ h1{
     color: #000000;
     padding: 20px 20px 20px 200px;
     box-sizing: border-box;
-    margin-top: 200px;
 }
 
 .foto{
   display: inline-block;
-  margin-top: 0px;
+  margin-top: 100px;
   float: left;
 }
 
@@ -151,17 +150,17 @@ h1{
  }
 */
 .profil{
-  display: inline-block;
+  display: ;
   float: left;
-  margin: 10%;
-  margin-top: 0px;
-  width: 200px;
-  height: auto;
-  background-color: #F0F8FF;
-  border-radius: 10px;
-  color: #000000;
-  padding: 30px 30px 30px 50px;
-  box-sizing: border-box;
+    margin: 32%;
+    margin-top: -420px;
+    width: 700px;
+    height: auto;
+    background-color: #F0F8FF;
+    border-radius: 10px;
+    color: #000000;
+    padding: 30px 30px 30px 50px;
+    box-sizing: border-box;
 }
 .hide {
     position: absolute;
@@ -190,4 +189,18 @@ label:hover{
     cursor: pointer;
     background-color: #42A5F5;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.tombol_login {
+  background: #d6291a;
+  color: white;
+  font-size: 15pt;
+  width: 100%;
+  border: none;
+  border-radius: 5px;
+  padding: 5px 30px;
+  text-decoration: none;
+}
+
+.tombol_login:hover{
+  background: #25BB42;
 }
